# image_video_effects

./: .deploy_app_manifest.json  .deploy_manifest.json  .gitignore  .pipeline-check-2026-04-18.md  .shader_chunk_manifest.json  .shader_sync_manifest.json  .swarm-state.md  4_AGENT_SWARM_PROMPT.md  AGENTS.md  AUDIT_REPORT.md  AutoDJ.ts  BUCKET_WATCHER.md  CREATIVE_VISION.md  DEVELOPER_CONTEXT.md  IDENTITY.md  IMPLEMENTATION_COMPLETE.md  MEMORY.md  NEW_SHADERS.md  PLAN-ADVANCED-EFFECTS.md  README.md  REMOTE_CONTROL_IMPLEMENTATION.md  SHADER_AUDIT.md  SHADER_FIX_SUMMARY.md  SHADER_PARAMETER_AUDIT.md  SHADER_PIPELINE_ENHANCEMENT.md  SHADER_RATING_INTEGRATION.md  SHADER_VALIDATION_REPORT.md  SOUL.md  USER.md  VPS_STORAGE_INTEGRATION.md  WASM_BACKEND_POLICY.md  WASM_BUILD_CI_GUIDE.md  WASM_RENDERER_GAP_ANALYSIS.md  WASM_SMOKE_TEST.md  WASM_TESTING.md  WASM_TEST_SUITE.md  WGSL_AUDIT_SWARM.md  aggregate_reports.py  analyze_runtime_errors.py  apply_to_storage_manager.py  (+73 more)
.openclaw/: workspace-state.json
.playwright-mcp/: page-2026-04-12T07-45-18-219Z.yml  page-2026-04-12T07-45-35-919Z.yml  page-2026-04-12T08-00-17-019Z.yml  page-2026-04-12T08-00-27-991Z.yml  page-2026-04-12T08-01-07-475Z.yml  page-2026-04-12T08-01-32-967Z.yml
agents/: .swarm-state.md  5_31_26_claude.md  5_31_26_copilot.md  5_31_26_grok.md  5_31_26_kimi.md  5_31_26_kimi_batch_b.md  5_31_26_kimi_batch_c.md  5_31_26_kimi_batch_d.md  5_31_26_kimi_batch_e.md  CLOUD_UPGRADE.md  EFFECT_UPGRADE_SWARM.md  EVALUATOR_SWARM.md  GENERATIVE_UPGRADE_SWARM.md  KIMI_CLI_SWARM_UPGRADE_PLAN.md  SHADER_SWARM_SUMMARY.md  WGSL_BUILTINS_GENERATIVE.md  claude_opus_tier1_integration_prompt.md  compatibility-tester.prompt  design-ethereal-silk.md  design-fractal-ember.md  design-nebula-pulse.md  git-sync-notes.md  grok_build_upgrade.md  local-json-reader.prompt  prompt-showcase-batch-1.md  shader-param-extractor.prompt  shader-param-uploader.prompt  shader-upgrade-round-2026-05.md  showcase-checklist-v1.md  swarm-linear-tracker.md  swarm-result-tracker.md  swarm-spec-shader-upgrade-phases.yaml  swarm-technical-reference.md  swarm-temporal-simulation-guide.md  swarm_6626.md  task-claude-batch3-color.md  task-codex-psychedelic-functions.md  task-kimiclaw-ethereal-silk.md  task-kimiclaw-molten-gold-upgrade.md  task-kimiclaw-nebula-pulse.md  (+8 more)
docs/: BRANCHLESS_PATTERNS.md  PARALLEL_SLOTS.md  SHARED_MEMORY_OPTIMIZATION.md  TEXTURE_OPTIMIZATIONS.md  ULTRA_SHADER_TECHNIQUES.md  WOLFRAM_SHADER_DATA.md
memorized_diary/: day2-2026-06-07-echo_chamber_energy_and_gold.md
memory/: 2026-03-14.md  2026-03-15.md  2026-06-07.md  2026-06-11.md  2026-06-14.md  2026-06-16.md  2026-06-20.md  2026-06-27-phase3.md  2026-06-27-tier-b.md  2026-06-27.md
notes/: CATEGORY_REFACTOR_SUMMARY.md  EFFECT_SHADER_UPGRADE_MANIFEST.md  GENERATIVE_SHADER_UPGRADE_MANIFEST.md  IMMUTABLE_LET_FIX_REPORT.md  IMPLEMENTATION_SUMMARY.md  LAYER_CHAIN_FIX_SUMMARY.md  NEW_SHADERS.md  SHADER_AUDIT.md  SHADER_COORDINATE_SYSTEM.md  SHADER_FIXES_SUMMARY.md  SHADER_PIPELINE_ENHANCEMENT.md  SHADER_SCANNER_ENHANCEMENTS.md  SHADER_TESTING_TOOLS.md  SHADER_TEST_REPORT.md  SHADER_UPGRADE_MANIFEST.md  SHADER_VALIDATION_SUMMARY.md  VPS_PATCH_README.md  extraction_report.md  issues_plan.md  new_shader_plan.md  old-shader-list.md  plan-mouse.md  plan.md  plan_celestial_forge.md  shaders_upgrade_plan.md  weekly_plan.md
playwright-report/: index.html
public/: custom-cursor.css  image_manifest.json  image_suggestions.md  image_suggestions_archive.md  index.html  preset_packs.json  shader-list.json  shader_coordinates.json  video_manifest.json
reports/: bindgroup_compatibility_report.json  bindgroup_fix_queue.json  bindgroup_fix_summary.md  bindgroup_triage.json  bindgroup_triage.md  binding_fix_review.json  fix_generative_blending.json  fix_multipass_chain.json  fix_report_bindings.json  fix_report_missing_bindings.json  fix_report_syntax.json  fix_zero_output.json  layer_chain_investigation.json  naga-scan-report.json  orphan_shader_defs.json  orphan_shader_defs.md  param_validation_report.json  post-audit.json  pre-audit.json  runtime_errors_report.json  shader_metadata_example.json  shader_validation_master_report.json  transformers-migration.md  wgsl_precommit_report.json  wgsl_syntax_report.json
scripts/: AUTHORING.md  NAGA_README.md  add_audio_batch3.py  add_audio_reactivity.py  add_audio_reactivity_v2.py  aggregate_reports.py  analyze_runtime_errors.py  apply-wgsl-fixes.py  assign_coordinates.py  audit_mouse_shaders.js  audit_orphan_shader_defs.py  audit_shader_complexity.js  batch_upload_params.py  bindgroup_checker.py  build-unified-manifest.ts  buildMultipassRegistry.js  bulk_upload_shaders.py  bulk_upload_to_vps.py  bulk_upload_via_webhook.py  check_duplicates.js  check_json.py  curate_phase_b.py  deploy.py  deploy_app_only.py  expand_phase_b.py  expand_phase_b_v2.py  extract_params.py  fix-batch-2.js  fix-compute-shaders.js  fix-enhanced.js  fix-naga.js  fix-reserved-keywords.js  fix-shader-errors.py  fix_bindgroups.py  fix_immutable_lets.py  fix_immutable_lets_auto.py  fix_phase_b_targets.py  fix_phase_b_v2.py  fix_shader_parameters.py  fix_target_keyword.py  (+54 more)
shader_plans/: 2026-03-07_celestial-astrolabe.md  2026-03-07_wasm-hls-physarum-swarm.md  2026-03-08_live-studio-tab.md  2026-03-08_raptor-mini.md  2026-03-08_silica-tsunami.md  2026-03-09_cyber-terminal.md  2026-03-09_prismatic-bismuth-lattice.md  2026-03-10_ethereal-anemone-bloom.md  2026-03-11_quantum-mycelium.md  2026-03-12_cybernetic-ferro-coral.md  2026-03-13_stellar-web-loom.md  2026-03-14_singularity-forge.md  2026-03-15_chromatic-glass-lattice.md  2026-03-16_xeno-botanical-synth-flora.md  2026-03-17_liquid-crystal-hive-mind.md  2026-03-18_astro-kinetic-chrono-orrery.md  2026-03-19_tectonic-plasma-crucible.md  2026-03-27_neuro-kinetic-bloom.md  (+123 more)
wasm_renderer/: ARCHITECTURE_ANALYSIS.md  ARTIFACTS.md  CMakeLists.txt  COMPLETENESS_ANALYSIS.md  PERFORMANCE_ANALYSIS.md  README.md  RENDERER_PLAN.md  STABILITY_ANALYSIS.md  STATUS.md  analyze_shaders.js  build.sh  main.cpp  renderer.cpp  renderer.h  wasm_bridge.d.ts  wasm_bridge.js
(+3322 files in other folders)
